report in progress
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/code/data_utils/dataset_preparation.ipynb
+++ b/code/data_utils/dataset_preparation.ipynb
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,20 +434,20 @@
     "import json\n",
     "\n",
     "def verify_value_is_between_0_and_1(value):\n",
-    "    if value < 0:\n",
-    "        return 0\n",
-    "    elif value > 1:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return value\n",
+    "    return max(0, min(1, value))\n",
     "\n",
     "def convert_percentage_to_normalized(x_pct, y_pct, width_pct, height_pct, original_width, original_height):\n",
     "    # Convert percentage to normalized\n",
-    "    x1_norm = verify_value_is_between_0_and_1((x_pct / 100.0) * original_width / original_width)\n",
-    "    y1_norm = verify_value_is_between_0_and_1((y_pct / 100.0) * original_height / original_height)\n",
-    "    x2_norm = verify_value_is_between_0_and_1(((x_pct / 100.0) * original_width + (width_pct / 100.0) * original_width) / original_width)\n",
-    "    y2_norm = verify_value_is_between_0_and_1(((y_pct / 100.0) * original_height + (height_pct / 100.0) * original_height) / original_height)\n",
-    "    return x1_norm, y1_norm, x2_norm, y2_norm\n",
+    "    #x1_norm = verify_value_is_between_0_and_1(x_pct / 100.0)\n",
+    "    #y1_norm = verify_value_is_between_0_and_1(y_pct / 100.0)\n",
+    "    #x2_norm = verify_value_is_between_0_and_1((x_pct + width_pct) / 100.0)\n",
+    "    #y2_norm = verify_value_is_between_0_and_1((y_pct + height_pct) / 100.0)\n",
+    "    #return x1_norm, y1_norm, x2_norm, y2_norm\n",
+    "    x = x_pct / 100.0\n",
+    "    y = y_pct / 100.0\n",
+    "    width = width_pct / 100.0\n",
+    "    height = height_pct / 100.0\n",
+    "    return x, y, width, height\n",
     "\n",
     "def convert_csv_to_json(csv_file):\n",
     "    data = []\n",
@@ -460,12 +460,12 @@
     "            try:\n",
     "                annotation = json.loads(row[\"label\"]) if row[\"label\"] else []\n",
     "                frame_id = int(row[\"image\"].split(\"_\")[-1].split(\".\")[0])\n",
+    "                image_name = row[\"image\"].split(\"/\")[-1]\n",
     "\n",
-    "                if frame_id == 0:\n",
-    "                    if len(frames) > 0:\n",
-    "                        data.append({\"video_id\": video_id, \"frames\": frames})\n",
-    "                        video_id += 1\n",
-    "                        frames = []\n",
+    "                if frame_id == 0 and frames:\n",
+    "                    data.append({\"video_id\": video_id, \"frames\": frames})\n",
+    "                    video_id += 1\n",
+    "                    frames = []\n",
     "\n",
     "                if annotation:\n",
     "                    original_width = annotation[0][\"original_width\"]\n",
@@ -473,7 +473,7 @@
     "\n",
     "                    value = annotation[0]\n",
     "\n",
-    "                    x_pct = value[\"x\"]\n",
+    "                    x_pct = value[\"x\"] \n",
     "                    y_pct = value[\"y\"]\n",
     "                    width_pct = value[\"width\"]\n",
     "                    height_pct = value[\"height\"]\n",
@@ -486,13 +486,14 @@
     "                    bbox_xyxy_norm = [x1_norm, y1_norm, x2_norm, y2_norm]\n",
     "\n",
     "                    output_entry = {\n",
+    "                        \"image_name\": image_name,\n",
     "                        \"frame\": frame_id,\n",
     "                        \"bbox\": bbox_xyxy_norm\n",
     "                    }\n",
     "                    frames.append(output_entry)\n",
     "\n",
     "            except json.JSONDecodeError:\n",
-    "                print(f\"Skipping row: {row}\")\n",
+    "                print(f\"Skipping row due to JSON decode error: {row}\")\n",
     "                continue\n",
     "\n",
     "    if frames:\n",
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
