--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -733,3 +733,411 @@
   volume   = {12368 LNCS},
   year     = {2020}
 }
+
+@misc{huggingface2023objectdetection,
+  author = {Hugging Face},
+  note   = {Accessed: 2024-06-17},
+  title  = {Object Detection Leaderboard},
+  url    = {https://huggingface.co/blog/object-detection-leaderboard},
+  year   = {2023}
+}
+
+@article{UnsupervisedVideoForecastingFlowParsingMechanism,
+  abstract = {Video forecasting aims to predict future video frames based on past observed video frames, and unlike object recognition or object classification, it does not require manual labeling of the data set. The explosive growth of Internet video data provides a huge space for its development. At present, it has become a research hotspot in the field of computer vision, and has broad application prospects in the field of automatic driving or robot navigation. However, due to the high dimensional characteristics and the complex spatial–temporal logic of video data, current methods still face the challenges of blurry and inconsistent prediction. The cognitive ability of “flow parsing mechanism” helps humans adapt to new situations systematically. Inspired by this, a deep flow parsing network for future video forecasting is proposed in this paper, which is designed to predict future scenes by parsing optical flow into rigid flow and residual flow. The rigid flow represents the scene dynamics due to observer’s ego-motion, while the residual flow corresponds to the movement of the other objects in the scene. With this procedure, the model exhibits much more comprehensive understanding over the environment and achieves top performance on competitive driving datasets, demonstrating its effectiveness and generalizability.},
+  author   = {Beibei Jin and Xiaohui Song and Jindong Li and Pengfei Zhang},
+  doi      = {https://doi.org/10.1016/j.engappai.2024.108652},
+  issn     = {0952-1976},
+  journal  = {Engineering Applications of Artificial Intelligence},
+  keywords = {Human vision system, Unsupervised learning, Video understanding, Flow parsing, Video forecasting},
+  pages    = {108652},
+  title    = {Unsupervised video forecasting with flow parsing mechanism of human visual system},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0952197624008108},
+  volume   = {134},
+  year     = {2024}
+}
+
+
+@article{PredictionHeadMovement360Degrees,
+  abstract       = {In this paper, we propose a prediction algorithm, the combination of Long Short-Term Memory (LSTM) and attention model, based on machine learning models to predict the vision coordinates when watching 360-degree videos in a Virtual Reality (VR) or Augmented Reality (AR) system. Predicting the vision coordinates while video streaming is important when the network condition is degraded. However, the traditional prediction models such as Moving Average (MA) and Autoregression Moving Average (ARMA) are linear so they cannot consider the nonlinear relationship. Therefore, machine learning models based on deep learning are recently used for nonlinear predictions. We use the Long Short-Term Memory (LSTM) and Gated Recurrent Unit (GRU) neural network methods, originated in Recurrent Neural Networks (RNN), and predict the head position in the 360-degree videos. Therefore, we adopt the attention model to LSTM to make more accurate results. We also compare the performance of the proposed model with the other machine learning models such as Multi-Layer Perceptron (MLP) and RNN using the root mean squared error (RMSE) of predicted and real coordinates. We demonstrate that our model can predict the vision coordinates more accurately than the other models in various videos.},
+  article-number = {3678},
+  author         = {Lee, Dongwon and Choi, Minji and Lee, Joohyun},
+  doi            = {10.3390/s21113678},
+  issn           = {1424-8220},
+  journal        = {Sensors},
+  number         = {11},
+  pubmedid       = {34070560},
+  title          = {Prediction of Head Movement in 360-Degree Videos Using Attention Model},
+  url            = {https://www.mdpi.com/1424-8220/21/11/3678},
+  volume         = {21},
+  year           = {2021}
+}
+
+
+@conference{CubicLSTMsVideoPrediction,
+  author            = {Fan, Hehe and Zhu, Linchao and Yang, Yi},
+  journal           = {33rd AAAI Conference on Artificial Intelligence, AAAI 2019, 31st Innovative Applications of Artificial Intelligence Conference, IAAI 2019 and the 9th AAAI Symposium on Educational Advances in Artificial Intelligence, EAAI 2019},
+  note              = {Cited by: 41},
+  pages             = {8263 – 8270},
+  publication_stage = {Final},
+  source            = {Scopus},
+  title             = {Cubic LSTMs for video prediction},
+  type              = {Conference paper},
+  url               = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85085021761&partnerID=40&md5=5ef1e8834ec46834bbb53bbcf11720c9},
+  year              = {2019}
+}
+
+@article{MovementPredictionBasedOnLSTMAndTransformers,
+  author            = {Zhiganov, S.V. and Ivanov, Y.S. and Grabar, D.M.},
+  doi               = {10.1134/S1064562423701624},
+  journal           = {Doklady Mathematics},
+  note              = {Cited by: 0},
+  number            = {Suppl 2},
+  pages             = {S484 – S493},
+  publication_stage = {Final},
+  source            = {Scopus},
+  title             = {Investigation of Neural Network Algorithms for Human Movement Prediction Based on LSTM and Transformers},
+  type              = {Article},
+  url               = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85188520135&doi=10.1134%2fS1064562423701624&partnerID=40&md5=6167b3200338fb5b5afd4ebe7e097c0f},
+  volume            = {108},
+  year              = {2023}
+}
+
+@article{DualBranchSpatialTemporalLearningNetworkVideoPrediction,
+  author            = {Huang, Huilin and Guan, Yepeng},
+  doi               = {10.1109/ACCESS.2024.3394209},
+  journal           = {IEEE Access},
+  note              = {Cited by: 0; All Open Access, Gold Open Access},
+  pages             = {73258 – 73267},
+  publication_stage = {Final},
+  source            = {Scopus},
+  title             = {A Dual-Branch Spatial-Temporal Learning Network for Video Prediction},
+  type              = {Article},
+  url               = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85191878045&doi=10.1109%2fACCESS.2024.3394209&partnerID=40&md5=a2491ede039a7189014acb3b7eb0256d},
+  volume            = {12},
+  year              = {2024}
+}
+
+@article{VideoFramePredictionByJointOptimizationWithSynthesisAndOpticalFlowEstimation,
+  author            = {Ranjan, Navin and Bhandari, Sovit and Kim, Yeong-Chan and Kim, Hoon},
+  doi               = {10.32604/cmc.2023.026086},
+  journal           = {Computers, Materials and Continua},
+  note              = {Cited by: 0; All Open Access, Gold Open Access},
+  number            = {2},
+  pages             = {2615 – 2639},
+  publication_stage = {Final},
+  source            = {Scopus},
+  title             = {Video Frame Prediction by Joint Optimization of Direct Frame Synthesis and Optical-Flow Estimation},
+  type              = {Article},
+  url               = {https://www.scopus.com/inward/record.uri?eid=2-s2.0-85152478811&doi=10.32604%2fcmc.2023.026086&partnerID=40&md5=3c3a7145b11a082102840f176198a13d},
+  volume            = {75},
+  year              = {2023}
+}
+
+@article{DBLP:journals/corr/GirshickDDM13,
+  author     = {Ross B. Girshick and
+                Jeff Donahue and
+                Trevor Darrell and
+                Jitendra Malik},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/GirshickDDM13.bib},
+  eprint     = {1311.2524},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:48:09 +0200},
+  title      = {Rich feature hierarchies for accurate object detection and semantic
+                segmentation},
+  url        = {http://arxiv.org/abs/1311.2524},
+  volume     = {abs/1311.2524},
+  year       = {2013}
+}
+
+@article{DBLP:journals/corr/Girshick15,
+  author     = {Ross B. Girshick},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/Girshick15.bib},
+  eprint     = {1504.08083},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:49:11 +0200},
+  title      = {Fast {R-CNN}},
+  url        = {http://arxiv.org/abs/1504.08083},
+  volume     = {abs/1504.08083},
+  year       = {2015}
+}
+
+@article{DBLP:journals/corr/DaiLHS16,
+  author     = {Jifeng Dai and
+                Yi Li and
+                Kaiming He and
+                Jian Sun},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/DaiLHS16.bib},
+  eprint     = {1605.06409},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Tue, 15 Sep 2020 14:17:39 +0200},
+  title      = {{R-FCN:} Object Detection via Region-based Fully Convolutional Networks},
+  url        = {http://arxiv.org/abs/1605.06409},
+  volume     = {abs/1605.06409},
+  year       = {2016}
+}
+
+@article{DBLP:journals/corr/LiuAESR15,
+  author     = {Wei Liu and
+                Dragomir Anguelov and
+                Dumitru Erhan and
+                Christian Szegedy and
+                Scott E. Reed and
+                Cheng{-}Yang Fu and
+                Alexander C. Berg},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/LiuAESR15.bib},
+  eprint     = {1512.02325},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Wed, 12 Feb 2020 08:32:49 +0100},
+  title      = {{SSD:} Single Shot MultiBox Detector},
+  url        = {http://arxiv.org/abs/1512.02325},
+  volume     = {abs/1512.02325},
+  year       = {2015}
+}
+
+@article{DBLP:journals/corr/RedmonDGF15,
+  author     = {Joseph Redmon and
+                Santosh Kumar Divvala and
+                Ross B. Girshick and
+                Ali Farhadi},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/RedmonDGF15.bib},
+  eprint     = {1506.02640},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:48:08 +0200},
+  title      = {You Only Look Once: Unified, Real-Time Object Detection},
+  url        = {http://arxiv.org/abs/1506.02640},
+  volume     = {abs/1506.02640},
+  year       = {2015}
+}
+
+@article{DBLP:journals/corr/RedmonF16,
+  author     = {Joseph Redmon and
+                Ali Farhadi},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/RedmonF16.bib},
+  eprint     = {1612.08242},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:48:25 +0200},
+  title      = {{YOLO9000:} Better, Faster, Stronger},
+  url        = {http://arxiv.org/abs/1612.08242},
+  volume     = {abs/1612.08242},
+  year       = {2016}
+}
+
+@misc{wang2024yolov10,
+  archiveprefix = {arXiv},
+  author        = {Ao Wang and Hui Chen and Lihao Liu and Kai Chen and Zijia Lin and Jungong Han and Guiguang Ding},
+  eprint        = {2405.14458},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {YOLOv10: Real-Time End-to-End Object Detection},
+  year          = {2024}
+}
+
+@article{DBLP:journals/corr/abs-2004-10934,
+  author     = {Alexey Bochkovskiy and
+                Chien{-}Yao Wang and
+                Hong{-}Yuan Mark Liao},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2004-10934.bib},
+  eprint     = {2004.10934},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Tue, 28 Apr 2020 16:10:02 +0200},
+  title      = {YOLOv4: Optimal Speed and Accuracy of Object Detection},
+  url        = {https://arxiv.org/abs/2004.10934},
+  volume     = {abs/2004.10934},
+  year       = {2020}
+}
+
+@misc{chen2023yoloms,
+  archiveprefix = {arXiv},
+  author        = {Yuming Chen and Xinbin Yuan and Ruiqi Wu and Jiabao Wang and Qibin Hou and Ming-Ming Cheng},
+  eprint        = {2308.05480},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {YOLO-MS: Rethinking Multi-Scale Representation Learning for Real-time Object Detection},
+  year          = {2023}
+}
+
+@article{DBLP:journals/corr/abs-2107-08430,
+  author     = {Zheng Ge and
+                Songtao Liu and
+                Feng Wang and
+                Zeming Li and
+                Jian Sun},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2107-08430.bib},
+  eprint     = {2107.08430},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Tue, 05 Apr 2022 14:09:44 +0200},
+  title      = {{YOLOX:} Exceeding {YOLO} Series in 2021},
+  url        = {https://arxiv.org/abs/2107.08430},
+  volume     = {abs/2107.08430},
+  year       = {2021}
+}
+
+@misc{YOLOv5Release,
+  author = {Glenn Jocher},
+  title  = {YOLOv5 Release v7.0},
+  url    = {https://github.com/ultralytics/yolov5/tree/v7.0},
+  year   = {2022}
+}
+
+@misc{YOLOv8,
+  author = {Glenn Jocher},
+  title  = {YOLOv8},
+  url    = {https://github.com/ultralytics/ultralytics/tree/main},
+  year   = {2023}
+}
+
+@misc{li2023yolov6,
+  archiveprefix = {arXiv},
+  author        = {Chuyi Li and Lulu Li and Yifei Geng and Hongliang Jiang and Meng Cheng and Bo Zhang and Zaidan Ke and Xiaoming Xu and Xiangxiang Chu},
+  eprint        = {2301.05586},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {YOLOv6 v3.0: A Full-Scale Reloading},
+  year          = {2023}
+}
+
+@misc{wang2024yolov9,
+  archiveprefix = {arXiv},
+  author        = {Chien-Yao Wang and I-Hau Yeh and Hong-Yuan Mark Liao},
+  eprint        = {2402.13616},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {YOLOv9: Learning What You Want to Learn Using Programmable Gradient Information},
+  year          = {2024}
+}
+
+@misc{xu2022ppyoloe,
+  archiveprefix = {arXiv},
+  author        = {Shangliang Xu and Xinxin Wang and Wenyu Lv and Qinyao Chang and Cheng Cui and Kaipeng Deng and Guanzhong Wang and Qingqing Dang and Shengyu Wei and Yuning Du and Baohua Lai},
+  eprint        = {2203.16250},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'
+                   },
+  title         = {PP-YOLOE: An evolved version of YOLO},
+  year          = {2022}
+}
+
+@misc{wang2023goldyolo,
+  archiveprefix = {arXiv},
+  author        = {Chengcheng Wang and Wei He and Ying Nie and Jianyuan Guo and Chuanjian Liu and Kai Han and Yunhe Wang},
+  eprint        = {2309.11331},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {Gold-YOLO: Efficient Object Detector via Gather-and-Distribute Mechanism},
+  year          = {2023}
+}
+
+@misc{xu2023damoyolo,
+  archiveprefix = {arXiv},
+  author        = {Xianzhe Xu and Yiqi Jiang and Weihua Chen and Yilun Huang and Yuan Zhang and Xiuyu Sun},
+  eprint        = {2211.15444},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {DAMO-YOLO : A Report on Real-Time Object Detection Design},
+  year          = {2023}
+}
+
+@misc{lin2018focal,
+  archiveprefix = {arXiv},
+  author        = {Tsung-Yi Lin and Priya Goyal and Ross Girshick and Kaiming He and Piotr Dollár},
+  eprint        = {1708.02002},
+  primaryclass  = {id='cs.CV' full_name='Computer Vision and Pattern Recognition' is_active=True alt_name=None in_archive='cs' is_general=False description='Covers image processing, computer vision, pattern recognition, and scene understanding. Roughly includes material in ACM Subject Classes I.2.10, I.4, and I.5.'},
+  title         = {Focal Loss for Dense Object Detection},
+  year          = {2018}
+}
+
+@article{SurveyDLOD,
+  author  = {Kang, Junhyung and Tariq, Shahroz and Oh, Han and Woo, Simon},
+  doi     = {10.1109/ACCESS.2022.3149052},
+  journal = {IEEE Access},
+  month   = {01},
+  pages   = {1-1},
+  title   = {A Survey of Deep Learning-Based Object Detection Methods and Datasets for Overhead Imagery},
+  volume  = {10},
+  year    = {2022}
+}
+
+@article{ConvLSTM,
+  author     = {Xingjian Shi and
+                Zhourong Chen and
+                Hao Wang and
+                Dit{-}Yan Yeung and
+                Wai{-}Kin Wong and
+                Wang{-}chun Woo},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/ShiCWYWW15.bib},
+  eprint     = {1506.04214},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:48:00 +0200},
+  title      = {Convolutional {LSTM} Network: {A} Machine Learning Approach for Precipitation
+                Nowcasting},
+  url        = {http://arxiv.org/abs/1506.04214},
+  volume     = {abs/1506.04214},
+  year       = {2015}
+}
+
+@inproceedings{KTH,
+  author    = {Schuldt, C. and Laptev, I. and Caputo, B.},
+  booktitle = {Proceedings of the 17th International Conference on Pattern Recognition, 2004. ICPR 2004.},
+  doi       = {10.1109/ICPR.2004.1334462},
+  keywords  = {Humans;Support vector machines;Computer vision;Pattern recognition;Support vector machine classification;Cameras;Frequency;Spatial databases;Performance evaluation;Image recognition},
+  number    = {},
+  pages     = {32-36 Vol.3},
+  title     = {Recognizing human actions: a local SVM approach},
+  volume    = {3},
+  year      = {2004}
+}
+
+@inproceedings{UCFSport,
+  author    = {Rodriguez, Mikel D. and Ahmed, Javed and Shah, Mubarak},
+  booktitle = {2008 IEEE Conference on Computer Vision and Pattern Recognition},
+  doi       = {10.1109/CVPR.2008.4587727},
+  keywords  = {Humans;Image motion analysis;Data analysis;Fourier transforms;Optical films;Optical filters;Computer vision;Spatiotemporal phenomena;Frequency domain analysis;Computational efficiency},
+  number    = {},
+  pages     = {1-8},
+  title     = {Action MACH a spatio-temporal Maximum Average Correlation Height filter for action recognition},
+  volume    = {},
+  year      = {2008}
+}
+
+@article{DBLP:journals/corr/FinnGL16,
+  author     = {Chelsea Finn and
+                Ian J. Goodfellow and
+                Sergey Levine},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/FinnGL16.bib},
+  eprint     = {1605.07157},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:48:41 +0200},
+  title      = {Unsupervised Learning for Physical Interaction through Video Prediction},
+  url        = {http://arxiv.org/abs/1605.07157},
+  volume     = {abs/1605.07157},
+  year       = {2016}
+}
+
+@article{DBLP:journals/corr/SrivastavaMS15,
+  author     = {Nitish Srivastava and
+                Elman Mansimov and
+                Ruslan Salakhutdinov},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/SrivastavaMS15.bib},
+  eprint     = {1502.04681},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 13 Aug 2018 16:47:05 +0200},
+  title      = {Unsupervised Learning of Video Representations using LSTMs},
+  url        = {http://arxiv.org/abs/1502.04681},
+  volume     = {abs/1502.04681},
+  year       = {2015}
+}
